feat: 更新 README，添加 OpenJDK loongson 镜像信息
Signed-off-by: Elysia <a.elysia@proton.me>